Final tune-up 1

--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
     }
     header {
       background: rgba(0, 33, 165, 0.9);
-      padding: 2rem 1rem;
+      padding: 1rem 1rem 1rem 1rem; /* TOP RIGHT BOTTOM LEFT */
       text-align: center;
       position: relative;
       z-index: 1;
@@ -195,7 +195,7 @@
   <div class="projects-grid">
     <div class="project-card" onclick="openModal(0)">
       <div class="carousel">
-        <img src="images/PICTURE_PLACEHOLDER.jpg" class="active">
+        <img src="images/intel_logo.gif" class="active">
       </div>
       <h3>Intel RTL Sub-IP Design</h3>
     </div>
@@ -211,13 +211,15 @@
     <div class="project-card" onclick="openModal(2)">
       <div class="carousel">
         <img src="images/soc_camera_car.jpg" class="active">
+        <img src="images/soc_car_auto.jpg">
       </div>
       <h3>SoC Design for Autonomous Car</h3>
     </div>
 
     <div class="project-card" onclick="openModal(3)">
       <div class="carousel">
-        <img src="images/PICTURE_PLACEHOLDER.jpg" class="active">
+        <img src="images/pynq_board.png" class="active">
+        <img src="images/pong_soc.jpg">
       </div>
       <h3>Pong Game on FPGA</h3>
     </div>
@@ -227,7 +229,8 @@
   <div class="projects-grid">
     <div class="project-card" onclick="openModal(4)">
       <div class="carousel">
-        <img src="images/PICTURE_PLACEHOLDER.jpg" class="active">
+        <img src="images/fieros_car.jpg" class="active">
+        <img src="images/fiero_restored.jpg">
       </div>
       <h3>Pontiac Fiero Engine Restoration</h3>
     </div>
@@ -235,13 +238,16 @@
     <div class="project-card" onclick="openModal(5)">
       <div class="carousel">
         <img src="images/roulette_circuit_diagram.png" class="active">
+        <img src="images/roulette_pcb.png">
+        <img src="images/roulette_pcd_design.png">
       </div>
       <h3>Roulette Game on Microcontroller</h3>
     </div>
 
     <div class="project-card" onclick="openModal(6)">
       <div class="carousel">
-        <img src="images/PICTURE_PLACEHOLDER.jpg" class="active">
+        <img src="images/up.jpg" class="active">
+        <img src="images/waveform_up.png">
       </div>
       <h3>DAC Waveform Generator & USART Piano</h3>
     </div>
@@ -268,7 +274,8 @@
   <div class="projects-grid">
     <div class="project-card" onclick="openModal(9)">
       <div class="carousel">
-        <img src="images/PICTURE_PLACEHOLDER.jpg" class="active">
+        <img src="images/python_logo.jpg" class="active">
+        <img src="images/twitter_logo.png">
       </div>
       <h3>API Automation Tools (Python Bots)</h3>
     </div>
