--- a/projects.html
+++ b/projects.html
@@ -182,6 +182,34 @@
       margin: 0.5rem 0;
     }
     }
+    .menu-toggle {
+      display: none;
+      cursor: pointer;
+      font-size: 1.5rem;
+      color: #fff;
+      margin-bottom: 0.5rem;
+    }
+    @media (max-width: 768px) {
+      .menu-toggle {
+      display: block;
+    }
+    .nav-links {
+      display: none;
+      flex-direction: column;
+      align-items: center;
+    }
+    .nav-links.active {
+      display: flex;
+    }
+    }
+    @media (max-width: 768px) {
+      .modal-content {
+      width: 90%;
+      max-width: 400px;
+      padding: 1rem;
+      font-size: 0.9rem;
+    }
+    }
   </style>
 </head>
 
@@ -200,11 +228,14 @@
 <header>
   <h1>Projects</h1>
   <nav>
-    <a href="index.html">Home</a>
-    <a href="projects.html">Projects</a>
-    <a href="resume.html">Resume</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+    <div class="menu-toggle" onclick="toggleMenu()">☰ Menu</div>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="projects.html">Projects</a>
+      <a href="resume.html">Resume</a>
+      <a href="contact.html">Contact</a>
+    </div>
+  </nav>  
 </header>
 
 <main>
@@ -394,7 +425,11 @@
         closeModal();
       }
     }
-  
+    function toggleMenu() {
+        const navLinks = document.querySelector('.nav-links');
+        navLinks.classList.toggle('active');
+    }
+
     // Auto-slide carousels
     document.querySelectorAll('.carousel').forEach(carousel => {
       const images = carousel.querySelectorAll('img');
