--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
       z-index: 1;
     }
     .sub-header {
-      text-align: left;
+      text-align: center;
       font-size: 1.2rem;
       margin-bottom: 2rem;
       opacity: 0.9;
@@ -163,53 +163,98 @@
       z-index: 1;
     }
     @media (max-width: 768px) {
-    .projects-grid {
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    }
-    .carousel, .carousel img {
-      height: 200px; /* Shrink carousel for mobile */
-    }
-    header {
-      padding: 0.5rem;
-    }
-    nav {
-      margin-top: 0.5rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    nav a {
-      margin: 0.5rem 0;
-    }
-    }
-    .menu-toggle {
-      display: none;
-      cursor: pointer;
-      font-size: 1.5rem;
-      color: #fff;
-      margin-bottom: 0.5rem;
-    }
-    @media (max-width: 768px) {
-      .menu-toggle {
-      display: block;
-    }
-    .nav-links {
-      display: none;
-      flex-direction: column;
-      align-items: center;
-    }
-    .nav-links.active {
-      display: flex;
-    }
-    }
-    @media (max-width: 768px) {
-      .modal-content {
-      width: 90%;
-      max-width: 400px;
-      padding: 1rem;
-      font-size: 0.9rem;
-    }
-    }
+  .projects-grid {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
+
+  .carousel, .carousel img {
+    height: 200px; /* Shrink carousel for mobile */
+  }
+
+  header {
+    padding: 0.5rem;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+  }
+
+  footer {
+    position: sticky;
+    bottom: 0;
+    z-index: 1000;
+  }
+
+  nav {
+    margin-top: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  nav a {
+    margin: 0.5rem 0;
+  }
+
+  .menu-toggle {
+    display: block;
+    cursor: pointer;
+    font-size: 1.5rem;
+    color: #fff;
+    margin-bottom: 0.5rem;
+  }
+
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .nav-links.active {
+    display: flex;
+    animation: fadeIn 0.3s ease forwards;
+  }
+
+  .modal-content {
+    width: 90%;
+    max-width: 400px;
+    padding: 1rem;
+    font-size: 0.9rem;
+  }
+}
+
+/* ✅ Styles for desktop (normal screens) */
+.menu-toggle {
+  display: none;
+}
+
+.nav-links {
+  display: flex;
+  justify-content: flex-end; /* Nav links right-aligned on desktop */
+  gap: 1rem;
+}
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* Center sub-header */
+.sub-header {
+  text-align: center;
+}
+
+/* Prevent body bouncing on mobile */
+body {
+  overscroll-behavior: none;
+}
+
+/* Fade-in animation for menu open */
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(-10px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
   </style>
 </head>
 
@@ -226,17 +271,19 @@
 </div>
 
 <header>
-  <h1>Projects</h1>
-  <nav>
-    <div class="menu-toggle" onclick="toggleMenu()">☰ Menu</div>
-    <div class="nav-links">
-      <a href="index.html">Home</a>
-      <a href="projects.html">Projects</a>
-      <a href="resume.html">Resume</a>
-      <a href="contact.html">Contact</a>
+    <div class="header-container">
+      <h1>Projects</h1>
+      <nav>
+        <div class="menu-toggle" onclick="toggleMenu()">☰ Menu</div>
+        <div class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="projects.html">Projects</a>
+          <a href="resume.html">Resume</a>
+          <a href="contact.html">Contact</a>
+        </div>
+      </nav>
     </div>
-  </nav>  
-</header>
+  </header>  
 
 <main>
   <p class="sub-header">
