--- a/projects.html
+++ b/projects.html
@@ -248,6 +248,19 @@ header h1 {
     padding: 1rem;
     font-size: 0.9rem;
   }
+  
+  header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  }
+
+.menu-toggle {
+  position: absolute;
+  left: 1rem;
+  top: 1rem;
+}
 }
 
 /* Fade-in animation for mobile menu */
