--- a/projects.html
+++ b/projects.html
@@ -219,7 +219,6 @@ header h1 {
   }
 }
 
-/* Mobile-specific styles */
 @media (max-width: 768px) {
   .projects-grid {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -236,10 +235,21 @@ header h1 {
   /* Show menu toggle button */
   .menu-toggle {
     display: block;
-    cursor: pointer;
     font-size: 2rem;
     color: #fff;
-    margin-top: 0.5rem;
+    margin-left: 1rem;
+  }
+
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1rem;
+  }
+
+  .nav-links.active {
+    display: flex;
+    animation: fadeIn 0.3s ease forwards;
   }
 
   .modal-content {
@@ -248,20 +258,25 @@ header h1 {
     padding: 1rem;
     font-size: 0.9rem;
   }
-  
+
+  /* 🔥 Key: Flex row for header, but special center for h1 */
   header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    position: relative;
+    padding: 1rem;
   }
 
-.menu-toggle {
-  position: absolute;
-  left: 1rem;
-  top: 1rem;
+  header h1 {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 0;
+    font-size: 1.5rem;
+  }
 }
-}
+
 
 /* Fade-in animation for mobile menu */
 @keyframes fadeIn {
