--- a/resume.html
+++ b/resume.html
@@ -14,10 +14,10 @@
       background: linear-gradient(to bottom right, #FA4616, #0021A5);
       background-attachment: fixed;
       color: #fff;
-      display: flex;
-      flex-direction: column;
       overflow-x: hidden;
       position: relative;
+      scroll-behavior: smooth;
+      overscroll-behavior: none;
     }
 
     .background-animation {
@@ -42,47 +42,38 @@
       background: rgba(0, 33, 165, 0.9);
       padding: 1rem 1rem 1rem 1rem; /* TOP RIGHT BOTTOM LEFT */
       text-align: center;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      z-index: 1;
       position: relative;
+      z-index: 1;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     }
-
     header h1 {
       margin: 0;
-      font-size: 2rem; /* Match home and projects */
+      font-size: 2rem;
       font-weight: 700;
     }
-
     nav {
       margin-top: 0.5rem;
     }
-
     nav a {
       color: #fff;
       text-decoration: none;
-      margin: 0 1.2rem;
+      margin: 0 1rem;
       font-weight: 500;
-      font-size: 1rem;
-      transition: color 0.3s;
     }
-
     nav a:hover {
       color: #FFCC00;
     }
 
     main {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 6rem 1rem 2rem 1rem;
+      padding: 5rem 2rem 2rem 2rem;
+      max-width: 1200px;
+      margin: auto;
       position: relative;
       z-index: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
     }
 
     .resume-card {
@@ -121,6 +112,7 @@
       text-decoration: none;
       font-weight: 500;
       transition: background-color 0.3s;
+      font-size: 1rem;
     }
 
     .download-link a:hover {
@@ -134,46 +126,152 @@
       text-align: center;
       padding: 1rem;
       font-size: 0.9rem;
-      z-index: 1;
       position: relative;
+      z-index: 1;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @media (min-width: 769px) {
+      .nav-links {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+        margin-top: 1rem;
+      }
+      .menu-toggle {
+        display: none;
+      }
+    }
+
+    @media (max-width: 768px) {
+        nav {
+    margin-top: 0.5rem;
+  }
+
+  /* Show menu toggle button */
+  .menu-toggle {
+    display: block;
+    font-size: 1rem;
+    color: #fff;
+    margin-left: .1rem;
+  }
+
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1rem;
+    gap: 0rem;
+    margin-left: .1rem;
+  }
+
+  .nav-links.active {
+    display: flex;
+    animation: fadeIn 0.3s ease forwards;
+  }
+
+  .modal-content {
+    width: 90%;
+    max-width: 400px;
+    padding: 1rem;
+    font-size: 0.9rem;
+  }
+
+  /* 🔥 Key: Flex row for header, but special center for h1 */
+  header {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    position: relative;
+    padding: 1rem;
+  }
+
+  header h1 {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 0;
+    font-size: 1.5rem;
+  }
+
+      /* 🔥 Mobile-specific resume card shrink */
+      .resume-card {
+        padding: 1.5rem;
+        max-width: 90%;
+      }
+
+      iframe {
+        height: 500px; /* shorter PDF viewer on phone */
+      }
+
+      .download-link a {
+        font-size: 0.9rem;
+        padding: 0.6rem 1.2rem;
+      }
     }
   </style>
 </head>
+
 <body>
 
-  <!-- Circuit Board Background Animation -->
-  <div class="background-animation">
-    <dotlottie-player 
-      src="https://lottie.host/7f862c30-c5ec-4829-a248-895fbce816c2/mRheNRO0yJ.lottie" 
-      background="transparent" 
-      speed="1" 
-      loop 
-      autoplay>
-    </dotlottie-player>
-  </div>
+<!-- Background animation -->
+<div class="background-animation">
+  <dotlottie-player 
+    src="https://lottie.host/7f862c30-c5ec-4829-a248-895fbce816c2/mRheNRO0yJ.lottie" 
+    background="transparent" 
+    speed="1" 
+    loop autoplay>
+  </dotlottie-player>
+</div>
 
-  <header>
-    <h1>Resume</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="projects.html">Projects</a>
-      <a href="resume.html">Resume</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
-
-  <main>
-    <div class="resume-card">
-      <iframe src="extra/Coppola_Resume_S2025_2.pdf"></iframe>
-      <div class="download-link">
-        <a href="extra/Coppola_Resume_S2025_2.pdf" download>Download Resume</a>
-      </div>
+<header>
+    <div class="header-container">
+      <h1>Resume</h1>
+      <nav>
+        <div class="menu-toggle" onclick="toggleMenu()">
+            <span id="menu-icon">☰</span>
+          </div>
+        <div class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="projects.html">Projects</a>
+          <a href="resume.html">Resume</a>
+        </div>
+      </nav>
     </div>
-  </main>
+  </header> 
 
-  <footer>
-    <p>&copy; 2025 Justin Coppola</p>
-  </footer>
+<main>
+  <div class="resume-card">
+    <iframe src="extra/Coppola_Resume_S2025_2.pdf"></iframe>
+    <div class="download-link">
+      <a href="extra/Coppola_Resume_S2025_2.pdf" download>Download Resume</a>
+    </div>
+  </div>
+</main>
+
+<footer>
+  <p>&copy; 2025 Justin Coppola</p>
+</footer>
+
+<script>
+  function toggleMenu() {
+    const navLinks = document.querySelector('.nav-links');
+    const menuIcon = document.getElementById('menu-icon');
+    navLinks.classList.toggle('active');
+
+    if (navLinks.classList.contains('active')) {
+      menuIcon.textContent = '✖'; // X
+    } else {
+      menuIcon.textContent = '☰'; // Hamburger
+    }
+  }
+</script>
 
 </body>
 </html>
