--- a/projects.html
+++ b/projects.html
@@ -245,6 +245,7 @@ header h1 {
     flex-direction: column;
     align-items: center;
     margin-top: 1rem;
+    gap: 0rem;
     margin-left: .1rem;
   }
 
@@ -311,7 +312,6 @@ header h1 {
           <a href="index.html">Home</a>
           <a href="projects.html">Projects</a>
           <a href="resume.html">Resume</a>
-          <a href="contact.html">Contact</a>
         </div>
       </nav>
     </div>
