--- a/index.html
+++ b/index.html
@@ -127,131 +127,136 @@
     }
 
     @media (min-width: 769px) {
-      .nav-links {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        gap: 2rem;
-        margin-top: 1rem;
+      header h1 {
+        padding: 0rem 0rem 1rem 0rem; /* TOP RIGHT BOTTOM LEFT */
       }
+      .nav-links a {
+        color: white;
+        text-decoration: none;
+        font-weight: 500;
+        transition: color 0.3s ease;
+        padding: 1rem 3rem; /* Top/Bottom: 1.5rem, Left/Right: 1rem */
+        width: 100%;
+        text-align: center;
+      }
+
+      .nav-links a:hover {
+        color: #FF5349;
+      }
+
       .menu-toggle {
         display: none;
       }
     }
 
     @media (max-width: 768px) {
+    /* About Me Card Adjustments */
+    .about-me {
+      padding: 1.5rem;
+      max-width: 90%;
+    }
 
-  .about-me {
-    padding: 1.5rem;
-    max-width: 90%;
-  }
+    .about-me h2 {
+      font-size: 1.5rem;
+    }
 
-  .about-me h2 {
-    font-size: 1.5rem;
-  }
+    .about-me p {
+      font-size: 1rem;
+    }
 
-  .about-me p {
-    font-size: 1rem;
-  }
+    .about-me img {
+      width: 180px;
+      height: 180px;
+      margin-bottom: 1rem;
+    }
 
-  .about-me img {
-    width: 180px;
-    height: 180px;
-    margin-bottom: 1rem;
-  }
-  nav {
-    margin-top: 0.5rem;
-  }
+    /* Navigation Adjustments */
+    nav {
+      margin-top: 0.5rem;
+    }
 
-  header {
-  background: rgba(0, 33, 165, 0.9);
-  height: 70px;
-  position: relative; /* This is key */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 10;
-}
+    header {
+      background: rgba(0, 33, 165, 0.9);
+      height: 70px;
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 10;
+    }
 
-.header-container {
-  width: 100%;
-  max-width: 1200px;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+    .header-container {
+      width: 100%;
+      max-width: 1200px;
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 
-.menu-toggle {
-  position: absolute;
-  left: 1rem;
-  font-size: 2rem;
-  color: #fff;
-  cursor: pointer;
-  z-index: 20;
-  top: 50%;
-  transform: translateY(-50%);
-}
+    .menu-toggle {
+      position: absolute;
+      top: 47%;
+      left: 0.5rem;
+      transform: translateY(-50%);
+      font-size: 2rem;
+      color: #fff;
+      cursor: pointer;
+      z-index: 20;
+    }
 
-h1 {
-  font-size: 1.8rem;
-  font-weight: 700;
-  color: white;
-  margin: 0;
-}
+    h1 {
+      font-size: 1.8rem;
+      font-weight: 700;
+      color: white;
+      margin: 0;
+    }
 
-.nav-links {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 75%; /* smaller width to feel more like a dropdown card */
-  margin: 0 auto; /* center it horizontally */
-  right: 0;
-  background: rgba(0, 33, 165, 0.95);
-  border-radius: 15px; /* ← FULL rounded edges */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  overflow: hidden;
-  max-height: 0;
-  opacity: 0;
-  transition: max-height 0.4s ease, opacity 0.4s ease;
-  z-index: 5;
-  box-shadow: 0px 4px 20px rgba(0,0,0,0.2); /* ← soft drop shadow */
-  background: rgba(0, 33, 165, 0.7);
-  backdrop-filter: blur(6px);
+    /* Mobile Dropdown Menu */
+    .nav-links {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+      width: 75%;
+      background: rgba(0, 33, 165, 0.7);
+      backdrop-filter: blur(6px);
+      border-radius: 15px;
+      box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      overflow: hidden;
+      max-height: 0;
+      opacity: 0;
+      transition: max-height 0.5s ease, opacity 0.5s ease;
+      z-index: 5;
+    }
 
-}
+    .nav-links.active {
+      max-height: 500px;
+      opacity: 1;
+    }
 
+    .nav-links a {
+      padding: 1rem 1rem;
+      width: 100%;
+      text-align: center;
+      text-decoration: none;
+      color: white;
+      font-weight: 500;
+      border-top: 1px solid rgba(255, 255, 255, 0.15);
+      transition: color 0.3s ease;
+    }
 
-.nav-links.active {
-  max-height: 500px; /* enough space to open */
-  opacity: 1;
-}
+    .nav-links a:first-child {
+      border-top: none;
+    }
 
-.nav-links a {
-  padding: 1rem;
-  width: 100%;
-  text-align: center;
-  border-top: 1px solid rgba(255, 255, 255, 0.15);
-  text-decoration: none;
-  color: white;
-  font-weight: 500;
-  transition: color 0.3s ease;
-}
-
-.nav-links a:first-child {
-  border-top: none;
-}
-
-.nav-links a:hover {
-  color: #ff9900;
-}
-
-
-
-
+    .nav-links a:hover {
+      color: #FF5349;
+    }
 }
   </style>
 </head>
@@ -303,11 +308,27 @@ h1 {
 
     if (navLinks.classList.contains('active')) {
       menuIcon.textContent = '✖'; // X
+      menuIcon.style.color = '#FF5349'; // Orange X
     } else {
       menuIcon.textContent = '☰'; // Hamburger
+      menuIcon.style.color = 'white'; // White Hamburger
     }
   }
+
+  // Auto-close menu when clicking a link
+  document.querySelectorAll('.nav-links a').forEach(link => {
+    link.addEventListener('click', () => {
+      const navLinks = document.querySelector('.nav-links');
+      const menuIcon = document.getElementById('menu-icon');
+      if (navLinks.classList.contains('active')) {
+        navLinks.classList.remove('active');
+        menuIcon.textContent = '☰';
+        menuIcon.style.color = 'white';
+      }
+    });
+  });
 </script>
+
 
 </body>
 </html>
