--- a/resume.html
+++ b/resume.html
@@ -136,70 +136,29 @@
     }
 
     @media (min-width: 769px) {
-      .nav-links {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        gap: 2rem;
-        margin-top: 1rem;
+      header h1 {
+        padding: 0rem 0rem 1rem 0rem; /* TOP RIGHT BOTTOM LEFT */
       }
+      .nav-links a {
+        color: white;
+        text-decoration: none;
+        font-weight: 500;
+        transition: color 0.3s ease;
+        padding: 1rem 3rem; /* Top/Bottom: 1.5rem, Left/Right: 1rem */
+        width: 100%;
+        text-align: center;
+      }
+
+      .nav-links a:hover {
+        color: #FF5349;
+      }
+
       .menu-toggle {
         display: none;
       }
     }
 
     @media (max-width: 768px) {
-        nav {
-    margin-top: 0.5rem;
-  }
-
-  /* Show menu toggle button */
-  .menu-toggle {
-    display: block;
-    font-size: 1rem;
-    color: #fff;
-    margin-left: .1rem;
-  }
-
-  .nav-links {
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 1rem;
-    gap: 0rem;
-    margin-left: .1rem;
-  }
-
-  .nav-links.active {
-    display: flex;
-    animation: fadeIn 0.3s ease forwards;
-  }
-
-  .modal-content {
-    width: 90%;
-    max-width: 400px;
-    padding: 1rem;
-    font-size: 0.9rem;
-  }
-
-  /* 🔥 Key: Flex row for header, but special center for h1 */
-  header {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    position: relative;
-    padding: 1rem;
-  }
-
-  header h1 {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    margin: 0;
-    font-size: 1.5rem;
-  }
-
       /* 🔥 Mobile-specific resume card shrink */
       .resume-card {
         padding: 1.5rem;
@@ -214,7 +173,94 @@
         font-size: 0.9rem;
         padding: 0.6rem 1.2rem;
       }
+    /* Navigation Adjustments */
+    nav {
+      margin-top: 0.5rem;
     }
+
+    header {
+      background: rgba(0, 33, 165, 0.9);
+      height: 70px;
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 10;
+    }
+
+    .header-container {
+      width: 100%;
+      max-width: 1200px;
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .menu-toggle {
+      position: absolute;
+      top: 47%;
+      left: 0.5rem;
+      transform: translateY(-50%);
+      font-size: 2rem;
+      color: #fff;
+      cursor: pointer;
+      z-index: 20;
+    }
+
+    h1 {
+      font-size: 1.8rem;
+      font-weight: 700;
+      color: white;
+      margin: 0;
+    }
+
+    /* Mobile Dropdown Menu */
+    .nav-links {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+      width: 75%;
+      background: rgba(0, 33, 165, 0.7);
+      backdrop-filter: blur(6px);
+      border-radius: 15px;
+      box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      overflow: hidden;
+      max-height: 0;
+      opacity: 0;
+      transition: max-height 0.5s ease, opacity 0.5s ease;
+      z-index: 5;
+    }
+
+    .nav-links.active {
+      max-height: 500px;
+      opacity: 1;
+    }
+
+    .nav-links a {
+      padding: 1rem 1rem;
+      width: 100%;
+      text-align: center;
+      text-decoration: none;
+      color: white;
+      font-weight: 500;
+      border-top: 1px solid rgba(255, 255, 255, 0.15);
+      transition: color 0.3s ease;
+    }
+
+    .nav-links a:first-child {
+      border-top: none;
+    }
+
+    .nav-links a:hover {
+      color: #FF5349;
+    }
+}
   </style>
 </head>
 
@@ -231,20 +277,18 @@
 </div>
 
 <header>
-    <div class="header-container">
-      <h1>Resume</h1>
-      <nav>
-        <div class="menu-toggle" onclick="toggleMenu()">
-            <span id="menu-icon">☰</span>
-          </div>
-        <div class="nav-links">
-          <a href="index.html">Home</a>
-          <a href="projects.html">Projects</a>
-          <a href="resume.html">Resume</a>
-        </div>
-      </nav>
+  <div class="header-container">
+    <div class="menu-toggle" onclick="toggleMenu()">
+      <span id="menu-icon">☰</span>
     </div>
-  </header> 
+    <h1>Resume</h1>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="projects.html">Projects</a>
+      <a href="resume.html">Resume</a>
+    </div>
+  </div>
+</header>
 
 <main>
   <div class="resume-card">
@@ -267,10 +311,25 @@
 
     if (navLinks.classList.contains('active')) {
       menuIcon.textContent = '✖'; // X
+      menuIcon.style.color = '#FF5349'; // Orange X
     } else {
       menuIcon.textContent = '☰'; // Hamburger
+      menuIcon.style.color = 'white'; // White Hamburger
     }
   }
+
+  // Auto-close menu when clicking a link
+  document.querySelectorAll('.nav-links a').forEach(link => {
+    link.addEventListener('click', () => {
+      const navLinks = document.querySelector('.nav-links');
+      const menuIcon = document.getElementById('menu-icon');
+      if (navLinks.classList.contains('active')) {
+        navLinks.classList.remove('active');
+        menuIcon.textContent = '☰';
+        menuIcon.style.color = 'white';
+      }
+    });
+  });
 </script>
 
 </body>
